feat: separate pinnedTabs/unpinnedTabs

--- a/src/libs/components/tab/Tab.module.scss
+++ b/src/libs/components/tab/Tab.module.scss
@@ -26,13 +26,12 @@
   background-color: rgba(174, 182, 206, 0.2);
 }
 .pinButton {
-  margin-left: auto; /* Відсуньте кнопку до кінця табу */
+  margin-left: auto;
   background: none;
   border: none;
   cursor: pointer;
-  /* Додайте додаткові стилі */
 }
 
 .pinned {
-  /* Стилі для закріпленого стану, наприклад, інший колір кнопки */
+  /* Styles for the pinned state, such as a different button color */
 }
