fix: add observer logic

--- a/src/libs/components/tabs-navigation/TabsNavigation.module.scss
+++ b/src/libs/components/tabs-navigation/TabsNavigation.module.scss
@@ -8,14 +8,14 @@
   margin-right: 16px;
 }
 
-.unpinnedTabsContainer {
+.allTabsContainer {
   display: flex;
   overflow-x: auto;
   white-space: nowrap;
   scrollbar-width: none;
 }
 
-.unpinnedTabsContainer::-webkit-scrollbar {
+.allTabsContainer::-webkit-scrollbar {
   display: none;
 }
 
