feat: add useHiddenObserver hook

--- a/src/libs/components/tabs-navigation/TabsNavigation.module.scss
+++ b/src/libs/components/tabs-navigation/TabsNavigation.module.scss
@@ -6,6 +6,7 @@
 .pinnedTabsContainer {
   display: flex;
   margin-right: 16px;
+  border-right: 2px solid  rgba(174, 182, 206, 0.2);
 }
 
 .allTabsContainer {
