--- a/src/libs/components/tab/Tab.module.scss
+++ b/src/libs/components/tab/Tab.module.scss
@@ -4,7 +4,8 @@
   padding: 10px 15px;
   text-transform: capitalize;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: all 0.5s;
+  background-color: rgba(255, 255, 255, 0.87);
 
   &:hover {
     background-color: rgba(174, 182, 206, 0.2);
@@ -24,6 +25,7 @@
   border-top: 2px solid #007bff;
   font-weight: bold;
   background-color: rgba(174, 182, 206, 0.2);
+  margin-right: 0;
 }
 .pinButton {
   margin-left: auto;
