--- a/src/index.scss
+++ b/src/index.scss
@@ -14,10 +14,14 @@
 
 #root {
 	max-width: 1280px;
-	margin: 0 auto;
+	height: calc(100vh - 40px);
+	margin: 20px auto;
 	text-align: center;
 	width: 100%;
 	padding: 0 1rem;
+	display: flex;
+	flex-direction: column;
+	background-color: rgb(240, 245, 250);
 }
 
 a {
