--- a/src/global.scss
+++ b/src/global.scss
@@ -13,11 +13,9 @@
 }
 
 #root {
-	max-width: 1280px;
 	height: calc(100vh - 40px);
-	margin: 20px auto;
+	margin: 20px 40px;
 	text-align: center;
-	width: 100%;
 	padding: 0 1rem;
 	display: flex;
 	flex-direction: column;
@@ -36,7 +34,7 @@ a:hover {
 body {
 	margin: 0;
 	display: flex;
-	min-width: 320px;
+	width: 100vw;
 	min-height: 100vh;
 	flex-direction: column;
 }
@@ -64,26 +62,3 @@ button:focus-visible {
 	outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (max-width: 768px) {
-	#root {
-		max-width: 100%;
-		padding: 0.5rem;
-	}
-
-	h1 {
-		font-size: 2em;
-	}
-}
-
-@media (prefers-color-scheme: light) {
-	:root {
-		color: #213547;
-		background-color: #ffffff;
-	}
-	a:hover {
-		color: #747bff;
-	}
-	button {
-		background-color: #f9f9f9;
-	}
-}
