--- a/src/libs/components/select/Select.module.scss
+++ b/src/libs/components/select/Select.module.scss
@@ -4,7 +4,7 @@
 }
 
 .dropdownButton {
-  color: #333;
+  color: var(--color-dark);
   border: none;
   padding: 8px;
   cursor: pointer;
@@ -16,10 +16,11 @@
 }
 
 .dropdownMenu {
+  color: gray;
   position: absolute;
   top: 100%;
   right: 0;
-  background: white;
+  background: var(--color-background);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 10;
   width: 210px;
